1er pre entrega lista

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <label for="descuento">¿Aplicar descuento del 20%? (Sí o No):</label>
         <input type="text" id="descuento" placeholder="Escriba si o no"/>
 
-        <button onclick="calcular()">Calcular</button>
+        <button id="calcularBtn">Calcular</button>
 
         <div id="resultado"></div>
         <article>
