--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <label for="cuotas">Ingrese la cantidad de cuotas:</label>
         <input type="number" id="cuotas" placeholder="3, 6 y hasta 12 cuotas"/>
 
-        <label for="descuento">¿Aplicar descuento del 20%? (Sí o No):</label>
+        <label for="descuento">Si esta asosciado a PAMI, tiene 20% de descuento. (Sí o No):</label>
         <input type="text" id="descuento" placeholder="Escriba si o no"/>
 
         <button id="calcularBtn">Calcular</button>
